fix button transition, scrollbar, textarea

--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -55,7 +55,7 @@
 }
 .contact-us__container__form__textarea{
     padding-bottom: 54px;
-    height: 84px;
+    height: 87px;
     resize: none;
     color: #0c0c0c;
 }
@@ -72,13 +72,13 @@
     width: 134px;
     height: 42px;
     background-color: #3350e9;
-
     font-family: "Gilroy", sans-serif;
     font-weight: 500;
     font-size: 14px;
     line-height: 129%;
     text-align: center;
     color: #fbfbfb;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-us__container__form__button:focus,
 .contact-us__container__form__button:hover{
@@ -94,67 +94,65 @@
     max-width: 100%;
     object-fit: cover;
 } 
-/* ----------=====-------- */
 @media screen and (min-width: 768px){
-.contact-us__container{
-    padding: 0 32px;
-    max-width: 768px;
-    margin-bottom: 80px;
-}
-.contact-us__title{
-    font-size: 48px;
-    line-height: 92%;
-}
-.contact-us__container__wrap{
-    border-radius: 50px;
-    max-width: 704px;
+    .contact-us__container{
+        padding: 0 32px;
+        max-width: 768px;
+        margin-bottom: 80px;
+    }
+    .contact-us__title{
+        font-size: 48px;
+        line-height: 92%;
+    }
+    .contact-us__container__wrap{
+        border-radius: 50px;
+        max-width: 704px;
 
-    margin-bottom: 40px;
-    padding: 50px 122px;
-}
-.contact-us__container__text{
-    font-size: 16px;
-    line-height: 125%;
-    margin-bottom: 32px;
-}
-.contact-us__container__form__input{
-    padding: 16px 18px 16px 18px;
-    width: 460px;
-    height: 52px;
-}
-.contact-us__container__form__textarea{
-    height: 90px;
-}
-.contact-us__container__form__button{
-    padding: 17px 63px;
-    width: 160px;
-    height: 52px;
-}
-.contact-us__container__picture{
-    border-radius: 50px;
-    max-width: 704px;
-}
+        margin-bottom: 40px;
+        padding: 50px 122px;
+    }
+    .contact-us__container__text{
+        font-size: 16px;
+        line-height: 125%;
+        margin-bottom: 32px;
+    }
+    .contact-us__container__form__input{
+        padding: 16px 18px 16px 18px;
+        width: 460px;
+        height: 52px;
+    }
+    .contact-us__container__form__textarea{
+        height: 90px;
+    }
+    .contact-us__container__form__button{
+        padding: 17px 63px;
+        width: 160px;
+        height: 52px;
+    }
+    .contact-us__container__picture{
+        border-radius: 50px;
+        max-width: 704px;
+    }
 }
 @media screen and (min-width: 1280px){
-.contact-us__container{
-    max-width: 1280px;
-    padding: 0 65px;
-    justify-content: center;
-    margin-bottom: 100px;
-}
-.contact-us__content{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    gap: 40px;
-}
-.contact-us__container__wrap{
-    max-width: 580px;
-    margin: 0;
-    padding: 50px 60px;
-
-}
-.contact-us__container__picture{
-    width: 530px;
-}
+    .contact-us__container{
+        max-width: 1280px;
+        padding: 0 65px;
+        justify-content: center;
+        margin-bottom: 100px;
+    }
+    .contact-us__content{
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        gap: 40px;
+    }
+    .contact-us__container__wrap{
+        max-width: 580px;
+        margin: 0;
+        padding: 50px 60px;
+    }
+    .contact-us__container__picture{
+        width: 530px;
+    }
 }  
